--- a/Genie/Templates/Infrastructure/Filters/Filters.tt
+++ b/Genie/Templates/Infrastructure/Filters/Filters.tt
@@ -2,6 +2,7 @@
 <#@ import namespace="Genie.Base" #>
 using System;
 using System.Collections.Generic;
+using System.Data;
 using <#=GenerationContext.BaseNamespace#>.Infrastructure.Filters.Abstract;
 
 namespace <#=GenerationContext.BaseNamespace#>.Infrastructure.Filters
@@ -94,6 +95,23 @@ namespace <#=GenerationContext.BaseNamespace#>.Infrastructure.Filters
         {
             IOrderJoin<T, TQ> Ascending();
             IOrderJoin<T, TQ> Descending();
+        }
+
+        #endregion
+
+        #region Common
+
+        public interface IRepoQuery
+        {
+            string Target { get; set; }
+            Queue<string> Where { get; set; }
+            Queue<string> Order { get; set; }
+            int? PageSize { get; set; }
+            int? Page { get; set; }
+            int? Limit { get; set; }
+            int? Skip { get; set; }
+            int? Take { get; set; }
+            IDbTransaction Transaction { get; set; }
         }
 
         #endregion
@@ -460,6 +478,27 @@ namespace <#=GenerationContext.BaseNamespace#>.Infrastructure.Filters
                 _parent.Add(string.Format("[{0}] DESC", _propertyName));
                 return new OrderJoin<T, TQ>(_parent, _q);
             }
+        }
+
+        #endregion
+
+        #region Common
+
+        public class RepoQuery : IRepoQuery
+        {
+            internal RepoQuery()
+            {
+            }
+
+            public string Target { get; set; }
+            public Queue<string> Where { get; set; }
+            public Queue<string> Order { get; set; }
+            public int? PageSize { get; set; }
+            public int? Page { get; set; }
+            public int? Limit { get; set; }
+            public int? Skip { get; set; }
+            public int? Take { get; set; }
+            public IDbTransaction Transaction { get; set; }
         }
 
         #endregion
