--- a/Genie/Templates/Infrastructure/Interfaces/IReadOnlyRepository.tt
+++ b/Genie/Templates/Infrastructure/Interfaces/IReadOnlyRepository.tt
@@ -2,6 +2,7 @@
 <#@ import namespace="Genie.Base" #>
 using System.Collections.Generic;
 using System.Data;
+using <#=GenerationContext.BaseNamespace#>.Infrastructure.Filters.Abstract;
 
 namespace <#=GenerationContext.BaseNamespace#>.Infrastructure.Interfaces
 {
@@ -13,5 +14,8 @@ namespace <#=GenerationContext.BaseNamespace#>.Infrastructure.Interfaces
 
 		IEnumerable<T> GetAll(IDbTransaction transaction = null, int? commandTimeout = null);
 		IEnumerable<T> GetBy(object where = null, object order = null, int? pageSize = null, int? page = null, IDbTransaction transaction = null, int? commandTimeout = null);
+
+        IEnumerable<T> Get(IRepoQuery query);
+	    int Count(IRepoQuery query);
 	}
 }
