--- a/Genie/Templates/Infrastructure/Repository.tt
+++ b/Genie/Templates/Infrastructure/Repository.tt
@@ -93,9 +93,9 @@ namespace <#=GenerationContext.BaseNamespace#>.Infrastructure
         }
 
 
-        internal virtual IEnumerable<T> Get(string targetName, Queue<string> where, Queue<string> order, int? pageSize = null, int? page = null, int? limit = null, int? skip = null, int? take = null, IDbTransaction transaction = null)
+        public virtual IEnumerable<T> Get(IRepoQuery query)
         {
-            var items = Conn.Get<T>(targetName, where, order, pageSize, page, limit, skip, take, transaction).ToList();
+            var items = Conn.Get<T>(query).ToList();
 
             foreach (var item in items)
             {
@@ -105,9 +105,9 @@ namespace <#=GenerationContext.BaseNamespace#>.Infrastructure
             return items;
         }		
 
-        internal virtual int Count(string targetName, Queue<string> where, Queue<string> order, int? pageSize = null, int? page = null, int? limit = null, int? skip = null, int? take = null, IDbTransaction transaction = null)
+        public virtual int Count(IRepoQuery query)
         {
-            return Conn.Count(targetName, where, order, pageSize, page, limit, skip, take, transaction);
+            return Conn.Count(query);
         }
     }
 }
