--- a/Genie/Templates/Infrastructure/Interfaces/IUnitOfWork.tt
+++ b/Genie/Templates/Infrastructure/Interfaces/IUnitOfWork.tt
@@ -21,10 +21,8 @@ namespace <#=GenerationContext.BaseNamespace#>.Infrastructure.Interfaces
       #>I<#=view.Name#>Repository <#=view.Name#>Repository { get; }
         <#}#>
 
-        <#foreach(var sp in _schema.Procedures){
-      #>List<T> <#=sp.Name#><T>(<#=sp.ParamString#>);
-        <#}#>
-
+		IProcedureContainer Procedures { get; }
+        
         void Commit();
     }
 }
