--- a/Genie/Templates/Infrastructure/ProcedureContainer.tt
+++ b/Genie/Templates/Infrastructure/ProcedureContainer.tt
@@ -2,19 +2,28 @@
 <#@ import namespace="Genie.Base" #>
 using System;
 using System.Collections.Generic;
+using System.Linq;
+using <#=GenerationContext.BaseNamespace#>.Dapper;
+using <#=GenerationContext.BaseNamespace#>.Infrastructure.Interfaces;
 
 namespace <#=GenerationContext.BaseNamespace#>.Infrastructure
 {
-	public class ProcedureContainer
+	public class ProcedureContainer: IProcedureContainer
     {
-		internal ProcedureContainer() { }
+		private IDapperContext Context { get; }
+
+		internal ProcedureContainer(IDapperContext context)
+		{
+		    Context = context;
+		}
+
 
 <#foreach(var sp in _schema.Procedures){ #>
-		public IEnumerable<T> <#=sp.Name#>List<T>(<#=sp.ParamString#>) { return Context.Connection.Query<T>("EXEC <#=sp.Name#> <#=sp.PassString#>"); }
+		public IEnumerable<T> <#=sp.Name#>_List<T>(<#=sp.ParamString#>) where T: class  { return Context.Connection.Query<T>("EXEC <#=sp.Name#> <#=sp.PassString#>"); }
 <#}#>
 
 <#foreach(var sp in _schema.Procedures){ #>
-		public T <#=sp.Name#>Single<T>(<#=sp.ParamString#>) { return Context.Connection.Query<T>("EXEC <#=sp.Name#> <#=sp.PassString#>").FirstOrDefault(); }
+		public T <#=sp.Name#>_Single<T>(<#=sp.ParamString#>) where T: class  { return Context.Connection.Query<T>("EXEC <#=sp.Name#> <#=sp.PassString#>").FirstOrDefault(); }
 <#}#>
     }
 }
