--- a/Genie/Templates/Infrastructure/Interfaces/IProcedureContainer.tt
+++ b/Genie/Templates/Infrastructure/Interfaces/IProcedureContainer.tt
@@ -8,11 +8,15 @@ namespace <#=GenerationContext.BaseNamespace#>.Infrastructure.Interfaces
 	public interface IProcedureContainer
     {
 <#foreach(var sp in _schema.Procedures){#>
-		IEnumerable<T> <#=sp.Name#>_List<T>(<#=sp.ParamString#>) where T: class;
+		IEnumerable<T> <#=sp.Name#>_List<T>(<#=sp.ParamString#>);
 <#}#>
 
 <#foreach(var sp in _schema.Procedures){#>
-		T <#=sp.Name#>_Single<T>(<#=sp.ParamString#>) where T: class;
+		T <#=sp.Name#>_Single<T>(<#=sp.ParamString#>);
+<#}#>
+
+<#foreach(var sp in _schema.Procedures){#>
+		void <#=sp.Name#>_Void(<#=sp.ParamString#>);
 <#}#>
     }
 }
