--- a/Genie/Templates/Infrastructure/Interfaces/IRepository.tt
+++ b/Genie/Templates/Infrastructure/Interfaces/IRepository.tt
@@ -14,7 +14,7 @@ namespace <#=GenerationContext.BaseNamespace#>.Infrastructure.Interfaces
         IDapperContext Context { get; }
 
 
-        void Add(T entity, IDbTransaction transaction = null, int? commandTimeout = null);
+        long Add(T entity, IDbTransaction transaction = null, int? commandTimeout = null);
         void Update(T entity, IDbTransaction transaction = null, int? commandTimeout = null);
         void Remove(T entity, IDbTransaction transaction = null, int? commandTimeout = null);
 
