Real Unit Of Work

--- a/Genie/Templates/Infrastructure/DapperContext.tt
+++ b/Genie/Templates/Infrastructure/DapperContext.tt
@@ -39,6 +39,11 @@ namespace <#=GenerationContext.BaseNamespace#>.Infrastructure
             }
         }
 
+        public IUnitOfWork Unit() 
+        {
+            return new UnitOfWork(this);
+        }
+
 		/// <summary>
         /// Dispose the context
         /// </summary>
