--- a/Genie/Templates/Infrastructure/Interfaces/IDapperContext.tt
+++ b/Genie/Templates/Infrastructure/Interfaces/IDapperContext.tt
@@ -14,5 +14,6 @@ namespace <#=GenerationContext.BaseNamespace#>.Infrastructure.Interfaces
         /// Connection to the database
         /// </summary>
 		IDbConnection Connection { get; }
+        IUnitOfWork Unit();
 	}
 }
