--- a/Genie/Templates/Infrastructure/Interfaces/IRepository.tt
+++ b/Genie/Templates/Infrastructure/Interfaces/IRepository.tt
@@ -13,15 +13,8 @@ namespace <#=GenerationContext.BaseNamespace#>.Infrastructure.Interfaces
         IDbConnection Conn { get; }
         IDapperContext Context { get; }
 
-
-        long Add(T entity, IDbTransaction transaction = null, int? commandTimeout = null);
-        void Update(T entity, IDbTransaction transaction = null, int? commandTimeout = null);
+        void Add(T entity, IDbTransaction transaction = null, int? commandTimeout = null);
         void Remove(T entity, IDbTransaction transaction = null, int? commandTimeout = null);
-
-        T GetByKey(object key, IDbTransaction transaction = null, int? commandTimeout = null);
-
-        IEnumerable<T> GetAll(IDbTransaction transaction = null, int? commandTimeout = null);
-        IEnumerable<T> GetBy(object where = null, object order = null, int? pageSize = null, int? page = null, IDbTransaction transaction = null, int? commandTimeout = null);
 
         IEnumerable<T> Get(IRepoQuery query);
 	    int Count(IRepoQuery query);
