--- a/Genie/Templates/Infrastructure/Models/BaseModel.tt
+++ b/Genie/Templates/Infrastructure/Models/BaseModel.tt
@@ -18,6 +18,7 @@ namespace <#=GenerationContext.BaseNamespace#>.Infrastructure.Models
         internal HashSet<string> UpdatedProperties { get; set; }
         internal ModelStatus DatabaseModelStatus { get; set; }
         internal IUnitOfWork DatabaseUnitOfWork { get; set; }
+        internal abstract void SetId(object id);
 
 		/// <summary>
         /// Checks the status of the object , and registers as updated property
