--- a/Genie/Templates/Infrastructure/Repository.tt
+++ b/Genie/Templates/Infrastructure/Repository.tt
@@ -25,25 +25,17 @@ namespace <#=GenerationContext.BaseNamespace#>.Infrastructure
             UnitOfWork = unitOfWork;
         }
 
-        public virtual long Add(T entity, IDbTransaction transaction = null, int? commandTimeout = null)
+        public virtual void Add(T entity, IDbTransaction transaction = null, int? commandTimeout = null)
         {
             if (entity == null)
             {
                 throw new ArgumentNullException("entity", "Add to DB null entity");
             }
-            var insertedId = Conn.Insert(entity, transaction: transaction, commandTimeout: commandTimeout);
+            
             entity.DatabaseModelStatus = ModelStatus.Retrieved;
-            entity.DatabaseUnitOfWork = UnitOfWork;
-            return insertedId;
-        }
-
-        public virtual void Update(T entity, IDbTransaction transaction = null, int? commandTimeout = null)
-        {
-            if (entity == null)
-            {
-                throw new ArgumentNullException("entity", "Update in DB null entity");
-            }
-            Conn.Update(entity, transaction: transaction, commandTimeout: commandTimeout);
+            entity.DatabaseUnitOfWork = UnitOfWork;           
+            var operation = new Operation(OperationType.Add, entity);
+            UnitOfWork.AddOp(operation);    
         }
 
         public virtual void Remove(T entity, IDbTransaction transaction = null, int? commandTimeout = null)
@@ -52,48 +44,10 @@ namespace <#=GenerationContext.BaseNamespace#>.Infrastructure
             {
                 throw new ArgumentNullException("entity", "Remove in DB null entity");
             }
-            var deleted = Conn.Delete(entity, transaction: transaction, commandTimeout: commandTimeout);
-            if(deleted) { entity.DatabaseModelStatus = ModelStatus.Deleted; }
+            
+            var operation = new Operation(OperationType.Remove, entity);
+            UnitOfWork.AddOp(operation);
         }
-
-        public virtual T GetByKey(object id, IDbTransaction transaction = null, int? commandTimeout = null)
-        {
-            if (id == null)
-            {
-                throw new ArgumentNullException("id");
-            }
-            var item = Conn.Get<T>(id, transaction: transaction, commandTimeout: commandTimeout);
-            item.DatabaseModelStatus = ModelStatus.Retrieved;
-            item.DatabaseUnitOfWork = UnitOfWork;
-            return item;
-        }
-
-        [Obsolete("GetAll is deprecated, please use Get instead.")]
-        public virtual IEnumerable<T> GetAll(IDbTransaction transaction = null, int? commandTimeout = null)
-        {
-            var items = Conn.GetAll<T>(transaction: transaction, commandTimeout: commandTimeout).ToList();
-
-            foreach (var item in items) 
-            {
-                item.DatabaseUnitOfWork = UnitOfWork;
-                item.DatabaseModelStatus = ModelStatus.Retrieved;
-            }
-            return items;
-        }
-
-        [Obsolete("GetBy is deprecated, please use Get instead.")]
-        public virtual IEnumerable<T> GetBy(object where = null, object order = null, int? pageSize = null, int? page = null, IDbTransaction transaction = null, int? commandTimeout = null)
-        {
-            var items = Conn.GetBy<T>(where: where, order: order, pageSize: pageSize, page: page , transaction: transaction, commandTimeout: commandTimeout).ToList();
-
-            foreach (var item in items)
-            {
-                item.DatabaseUnitOfWork = UnitOfWork;
-                item.DatabaseModelStatus = ModelStatus.Retrieved;
-            }
-            return items;
-        }
-
 
         public virtual IEnumerable<T> Get(IRepoQuery query)
         {
@@ -103,9 +57,10 @@ namespace <#=GenerationContext.BaseNamespace#>.Infrastructure
             {
                 item.DatabaseUnitOfWork = UnitOfWork;
                 item.DatabaseModelStatus = ModelStatus.Retrieved;
+                UnitOfWork.AddObj(item);
             }
             return items;
-        }		
+        }
 
         public virtual int Count(IRepoQuery query)
         {
