--- a/Genie/Templates/Infrastructure/UnitOfWork.tt
+++ b/Genie/Templates/Infrastructure/UnitOfWork.tt
@@ -3,7 +3,10 @@
 using System;
 using System.Collections.Generic;
 using System.Data;
+using System.Linq;
+using <#=GenerationContext.BaseNamespace#>.Dapper;
 using <#=GenerationContext.BaseNamespace#>.Infrastructure.Interfaces;
+using <#=GenerationContext.BaseNamespace#>.Infrastructure.Models;
 using <#=GenerationContext.BaseNamespace#>.Infrastructure.Repositories.Abstract;
 using <#=GenerationContext.BaseNamespace#>.Infrastructure.Repositories.Concrete;
 
@@ -12,6 +15,9 @@ namespace <#=GenerationContext.BaseNamespace#>.Infrastructure
     public class UnitOfWork : IUnitOfWork, IDisposable
     {
 		private IProcedureContainer _procedureContainer;
+
+        private readonly List<IOperation> _operations;
+        private readonly HashSet<BaseModel> _objects;
 
         <#foreach(var relation in _schema.Relations){
       #>private I<#=relation.Name#>Repository <#=relation.FieldName#>Repository;
@@ -26,9 +32,11 @@ namespace <#=GenerationContext.BaseNamespace#>.Infrastructure
         private IDapperContext Context { get;}
         private IDbTransaction Transaction { get; set; }
 
-        public UnitOfWork(IDapperContext context, IRepositoryFactory factory)
+        public UnitOfWork(IDapperContext context)
         {
             Context = context;
+            _objects = new HashSet<BaseModel>();
+            _operations = new List<IOperation>();
         }
             
             
@@ -58,9 +66,30 @@ namespace <#=GenerationContext.BaseNamespace#>.Infrastructure
                 Transaction.Dispose();
                 Transaction = null;
             }
-            else
+
+            var updated = _objects.Where(o => o.UpdatedProperties.Count > 0);
+            _operations.AddRange(updated.Select(u => new Operation(OperationType.Update, u)));
+
+            if (_operations.Count > 0)
             {
-                throw new NullReferenceException("Tried commit not opened transaction");
+                var connection = Context.Connection;
+
+                var toAdd = _operations.Where(o => o.Type == OperationType.Add).ToList();
+                var toDelete = _operations.Where(o => o.Type == OperationType.Remove).ToList();
+                var toUpdate = _operations.Where(o => o.Type == OperationType.Update).ToList();
+
+                foreach (var operation in toAdd)
+                {
+                    var newId = connection.Insert(operation.Object);
+                    operation.Object.SetId(newId);
+                }
+                    
+
+                foreach (var operation in toUpdate)
+                    connection.Update(operation.Object);
+
+                foreach (var operation in toDelete)
+                    connection.Delete(operation.Object);
             }
         }
 
@@ -70,10 +99,16 @@ namespace <#=GenerationContext.BaseNamespace#>.Infrastructure
             {
                 Transaction.Dispose();
             }
-            if (Context != null)
-            {
-                Context.Dispose();
-            }
+        }
+
+        public void AddOp(IOperation operation)
+        {
+            _operations.Add(operation);
+        }
+
+        public void AddObj(BaseModel obj)
+        {
+            _objects.Add(obj);
         }
     }
 }
