--- a/Genie/Templates/Infrastructure/DapperContext.tt
+++ b/Genie/Templates/Infrastructure/DapperContext.tt
@@ -29,14 +29,7 @@ namespace <#=GenerationContext.BaseNamespace#>.Infrastructure
         /// </summary>
         public IDbConnection Connection
         {
-            get
-            {
-                if (_connection == null)
-                    _connection = new SqlConnection(_connectionString);
-                if (_connection.State != ConnectionState.Open)
-                    _connection.Open();
-                return _connection;
-            }
+             get { return _connection ?? (_connection = new SqlConnection(_connectionString)); }
         }
 
         public IUnitOfWork Unit() 
@@ -49,8 +42,12 @@ namespace <#=GenerationContext.BaseNamespace#>.Infrastructure
         /// </summary>
         public void Dispose()
         {
-            if (_connection != null && _connection.State == ConnectionState.Open)
-                _connection.Close();
+		    if (_connection == null)
+                return;
+
+		    if (_connection.State != ConnectionState.Closed)
+		        _connection.Close();
+		    _connection.Dispose();
         }
     }
 }
